@@ -1,3 +1,8 @@
+2011-05-24  Pedro Alves  <pedro@codesourcery.com>
+
+	* solib-svr4.c (svr4_solib_create_inferior_hook): Skip setting
+	shared library event breakpoint if there's no execution.
+
 2011-05-24  Thiago Jung Bauermann  <bauerman@br.ibm.com>
 
 	* breakpont.c (remove_hw_watchpoints): Remove unused function.
